# CP-reminder

./: Dockerfile  README.md  flake.nix  pyproject.toml  requirements.txt
remind/: __main__.py  constants.py
remind/cogs/: logging.py  meta.py  reminders.py
